<resources>
    <string name="app_name">생각하는\n지갑</string>
    <string name="app_name2">생지</string>
    <string name="title_book">가계부</string>
    <string name="title_statistic">통계</string>
    <string name="title_mypage">마이페이지</string>
    <string name="dateBack">&lt;</string>
    <string name="dateFront">&gt;</string>
    <string name="add">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">회원가입</string>
    <string name="back">&lt;</string>
    <string name="Autodate">날짜(자동입력)</string>
    <string name="save">저장</string>
    <string name="hintbreak">사용내역(사용자 입력)</string>
    <string name="hintprice">금액(사용자 입력)</string>
</resources>